SERVER-101078 Do not close connection sending loadBalanced:true in mongod (#32869)

Co-authored-by: Shreyas Kalyan <shreyas.kalyan@mongodb.com>
GitOrigin-RevId: 5c0584ca71fd761fbab96fada76c02071748cf7b